Bug 159110 - LibreOffice stores URLs in files incorrect
Summary: LibreOffice stores URLs in files incorrect
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.4.1 release
Hardware: All Windows (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:24.8.0 target:24.2.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-10 16:22 UTC by PavloT
Modified: 2024-01-12 10:35 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description PavloT 2024-01-10 16:22:50 UTC
Description:
Hi!

I use LO with CLI to convert .docx to .pdf and faced with this issue.
I use LibreOffice 7.6.4.1 and 7.5.9.2 and noticed one moment with URLs that LO removes additional space (%20).
Example link: https://google.com/Reference%20%20Materials/Tools%20%20-%20CPMC%20Approved%20List.pdf

I have .docx file with correct (above) link. If I open this file in LO - everything is ok and I can see double space in link.

If I save w/o changes this file using LO (word 2007 or 2010 .docx) I can see that everything is ok when opening this file in MS Word (I have 2 spaces in link) but opening this file in LO shows me only one space : https://google.com/Reference%20Materials/Tools%20-%20CPMC%20Approved%20List.pdf
If I open resaved with LO file and export to PDF - I also have link with one space.

If I unzip original .docx file and saved with LO file, I can see:
word -> _rels -> document.xml.rels

Original .docx:
<Relationship Id="rId4" Target="https://google.com/Reference%20%20Materials/Tools%20%20-%20CPMC%20Approved%20List.pdf" TargetMode="External" Type="http://schemas.openxmlformats.org/officeDocument/2006/relationships/hyperlink"/>
	<Relationship Id="rId5" Target="https://google.com/Reference%20%20Materials/Tools%20%20-%20CPMC%20Approved%20List.pdf" TargetMode="External" Type="http://schemas.openxmlformats.org/officeDocument/2006/relationships/hyperlink"/>

Saved by LO:
<Relationship Id="rId2" Type="http://schemas.openxmlformats.org/officeDocument/2006/relationships/hyperlink" Target="https://google.com/Reference  Materials/Tools  - CPMC Approved List.pdf" TargetMode="External"/>
	<Relationship Id="rId3" Type="http://schemas.openxmlformats.org/officeDocument/2006/relationships/hyperlink" Target="https://google.com/Reference  Materials/Tools  - CPMC Approved List.pdf" TargetMode="External"/>

Copy link or Ctrl-click opens incorrect link with one space. The problem is only with docx file saved by LO. And in MS Word I can see two spaces in link but LO shows me one space and future processes with doc work with one space. But for me its broken link.


Steps to Reproduce:
1. Create .docx file with any correct link (encoded) with two or more spaces (Example: https://google.com/Reference%20%20%20Materials/Tools%20%20-%20CPMC%20%20Approved%20List.pdf)
2.Open file in LibreOficce and resave it to the same format.
3.Open file with LibreOffice and copy or show link - it contains only one space.

Actual Results:
The URLs with more than one space aren’t stored in the file correctly

Expected Results:
The URLs are stored in the file correctly


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.9.2 (X86_64) / LibreOffice Community
Build ID: cdeefe45c17511d326101eed8008ac4092f278a9
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 1 Mike Kaganski 2024-01-10 16:41:41 UTC
https://gerrit.libreoffice.org/c/core/+/161893
Comment 2 Commit Notification 2024-01-11 02:59:51 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7bd7085bcfce0b32179197a14189604d4c7478e1

tdf#159110: store URLs to DOCX correctly

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-01-11 09:37:33 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/ac09b8b599f92ffeec85fbba765d546fb4b091b1

tdf#159110: store URLs to DOCX correctly

It will be available in 24.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 PavloT 2024-01-11 10:19:11 UTC
(In reply to Commit Notification from comment #2)
> Mike Kaganski committed a patch related to this issue.
> It has been pushed to "master":
> 
> https://git.libreoffice.org/core/commit/
> 7bd7085bcfce0b32179197a14189604d4c7478e1
> 
> tdf#159110: store URLs to DOCX correctly
> 
> It will be available in 24.8.0.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Hi!
is it correct .msi https://dev-builds.libreoffice.org/daily/master/Win-x86_64@tb78-pollux-TDF/current/ ?
Comment 5 Mike Kaganski 2024-01-11 10:22:24 UTC
(In reply to PavloT from comment #4)

Yes, that one should contain the patch. Thanks for testing!
Comment 6 PavloT 2024-01-11 10:37:01 UTC
(In reply to Mike Kaganski from comment #5)
> (In reply to PavloT from comment #4)
> 
> Yes, that one should contain the patch. Thanks for testing!

Strange. When testing - I have the previoys result as w/o patch.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3cb1ed4339fc9aec414c0f112a69705a7a4d9cc6
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded

Orig file:
<Relationship Id="rId4" Target="https://google.com/Reference%20%20Materials/Tools%20%20-%20CPMC%20Approved%20List.pdf" TargetMode="External" Type="http://schemas.openxmlformats.org/officeDocument/2006/relationships/hyperlink"/>
	<Relationship Id="rId5" Target="https://google.com/Reference%20%20Materials/Tools%20%20-%20CPMC%20Approved%20List.pdf" TargetMode="External" Type="http://schemas.openxmlformats.org/officeDocument/2006/relationships/hyperlink"/>


Saved by LO:
<Relationship Id="rId2" Type="http://schemas.openxmlformats.org/officeDocument/2006/relationships/hyperlink" Target="https://google.com/Reference  Materials/Tools  - CPMC Approved List.pdf" TargetMode="External"/>
	<Relationship Id="rId3" Type="http://schemas.openxmlformats.org/officeDocument/2006/relationships/hyperlink" Target="https://google.com/Reference  Materials/Tools  - CPMC Approved List.pdf" TargetMode="External"/>
Comment 7 Mike Kaganski 2024-01-11 10:39:55 UTC
(In reply to PavloT from comment #6)

Ah - sorry. I confused both of us; the comment 2 is from 2024-01-11 02:59:51 UTC; so it is from today. The builds in dailies are from this night, and indeed they don't yet contain it. It will be in tomorrow's builds.
Comment 8 PavloT 2024-01-11 10:41:37 UTC
(In reply to Mike Kaganski from comment #7)
> (In reply to PavloT from comment #6)

Ok, thanks. I`ll test it tomorrow.
Comment 9 PavloT 2024-01-12 08:55:26 UTC
(In reply to Mike Kaganski from comment #7)
> (In reply to PavloT from comment #6)
> 

Morning!
I`ve tested 24.8.0.0 and it seems the bug is fixed/
After resave original file with LO I have correct URLs:
<Relationship Id="rId2" Type="http://schemas.openxmlformats.org/officeDocument/2006/relationships/hyperlink" Target="https://google.com/Reference%20%20Materials/Tools%20%20-%20CPMC%20Approved%20List.pdf" TargetMode="External"/>
	<Relationship Id="rId3" Type="http://schemas.openxmlformats.org/officeDocument/2006/relationships/hyperlink" Target="https://google.com/Reference%20%20Materials/Tools%20%20-%20CPMC%20Approved%20List.pdf" TargetMode="External"/>

Should I use this build 24.8.0.0 or somewhere exists patch for LibreOffice 7.6.4.1 and 7.5.9.2 or patched virsionen?

If no, when patchae version will be available for download?

Thank you,
Comment 10 Mike Kaganski 2024-01-12 10:06:46 UTC
(In reply to PavloT from comment #9)
> I`ve tested 24.8.0.0 and it seems the bug is fixed/

Great; thanks for testing!

> Should I use this build 24.8.0.0 or somewhere exists patch for LibreOffice
> 7.6.4.1 and 7.5.9.2 or patched virsionen?

There will be no more releases of 7.5 branch; this fix will not appear there therefore.

There is no backport to 7.6 (yet?). But the 24.2 version got its backport, as notified in comment 3; it will see its first (.0) release in first days of February.

I do not recommend using pre-release versions (or first releases of a branch, like 24.2.0 - 24.2.2) for mission-critical projects - unless it is unavoidable.
Comment 11 PavloT 2024-01-12 10:35:06 UTC
(In reply to Mike Kaganski from comment #10)


Ok, got it.
Thank you for help.