tdf#159110: store URLs to DOCX correctly

It must not decode URLs, and must store it percent-encoded.

This was wrong since commit 7b0b5cdfeed656b279bc32cd929630d5fc25878b
(initial import, 2000-09-18).

Commit d68b1b6ae355c92e982ec845216ba459dbdd9e16 (use correct
INetURL-Decode enum, 2000-10-20) replaced incorrect "with charset"
decoding with another incorrect "unambiguous" decoding.

Change-Id: I915897dc2e3eb838fc02b4ac338b3d76fe0477fa
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161893
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>